RESOLVED FIXED301515
[OpenXR] Instance is never finalized even after exiting active sessions
https://bugs.webkit.org/show_bug.cgi?id=301515
Summary [OpenXR] Instance is never finalized even after exiting active sessions
Sergio Villar Senin
Reported 2025-10-27 08:34:55 PDT
The OpenXR instance is created on demand as soon as WebXR requires info about the available devices. That instance is then never destroyed even after exiting all the active WebXR sessions. That might be problematic in some environments that expect applications to free the instance once it is no longer needed. There should be possible to destroy and recreate it as many times as needed without a noticeable performance penalty
Attachments
Sergio Villar Senin
Comment 1 2025-10-27 08:42:30 PDT
EWS
Comment 2 2025-10-28 06:12:38 PDT
Committed 302232@main (a976451bcf95): <https://commits.webkit.org/302232@main> Reviewed commits have been landed. Closing PR #53033 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-10-28 06:13:12 PDT
Note You need to log in before you can comment on or make changes to this bug.