[OpenXR] Instance is never finalized even after exiting active sessions https://bugs.webkit.org/show_bug.cgi?id=301515

Reviewed by Fujii Hironori.

The OpenXR instance is now cleaned up once the session and its
associated resources are disposed. We don't need to keep it around
since creating new instances is a cheap operation.

No new tests required as there are already API tests verifying
the creation/destruction of OpenXR sessions.

* Source/WebKit/UIProcess/XR/openxr/PlatformXROpenXR.cpp:
(WebKit::OpenXRCoordinator::~OpenXRCoordinator):
(WebKit::OpenXRCoordinator::startSession):
(WebKit::OpenXRCoordinator::endSessionIfExists):
(WebKit::OpenXRCoordinator::cleanupInstanceAndAssociatedResources):
(WebKit::OpenXRCoordinator::cleanupAllResources):
(WebKit::OpenXRCoordinator::handleSessionStateChange):
* Source/WebKit/UIProcess/XR/openxr/PlatformXROpenXR.h:

Canonical link: https://commits.webkit.org/302232@main